--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,5 +1,7 @@
 .message {
-
+    height: 100%;
+    width: 100%;
+    display: flex;
 }
 
 .imageAndText {
@@ -7,7 +9,8 @@
 }
 
 .imageAndText img {
-
+    height: 48px;
+    width: 48px;
 }
 
 .text {
@@ -19,13 +22,22 @@
 }
 
 .name {
-
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #000000;
 }
 
 .messageText {
-
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
 }
 
 .time {
-
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #000;
 }
