--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -1,10 +1,10 @@
 [data-theme='1'] {
-    --color: #000000;
+    --color: #819dba;
     --background: #FFFFFF;
 }
 
 [data-theme='2'] {
-    --color: #000000;
+    --color: #232323;
     --background: #DDEEFF;
 }
 
