--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -1,3 +1,8 @@
+:root {
+    --background: #FFFFFF;
+    --color: #000000;
+}
+
 [data-theme='1'] {
     --color: #000000;
     --background: #FFFFFF;
